sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: ')' expected but ',' found.
    if (!plusPetitQue(i-j),v)
                          ^AlgInsertionSort:18: error: illegal start of simple expression
  }
  ^