sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr= getNombreValeurs()
  var v =0
  var cpt=0
  for (i<- 1 to lgr-1)
  {
    v=getValeur(i)
    for (j<-1 to lgr-1)
    if (!plusPetitQue(i-j),v)
    {
      cpt=j
      echange(i-j+1,i-j)
      
    }
    setValeur(i-cpt,v)

  }
}